Silence compiler warnings https://bugs.webkit.org/show_bug.cgi?id=207015

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-02-01
Reviewed by Darin Adler.

Source/WebCore:

* accessibility/AXObjectCache.cpp:
(WebCore::characterForCharacterOffset): Use IGNORE_CLANG_WARNINGS macros to avoid
warnings when using GCC. GCC freaks out when it doesn't recognize a warning passed to
IGNORE_WARNINGS_BEGIN().
* inspector/InspectorCanvas.cpp:
(WebCore::InspectorCanvas::buildObjectForCanvas): Fix -Wredundant-move
* platform/PasteboardItemInfo.h: Fix -Wredundant-move
(WebCore::PresentationSize::decode):
(WebCore::PasteboardItemInfo::decode):

Source/WebKit:

Use UNUSED_VARIABLE() for variable that is only used inside RELEASE_LOG(), which is
Apple-specific.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::didFailLoading):

Canonical link: https://commits.webkit.org/220103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255548 268f45cc-cd09-0410-ab3c-d52691b4dbfc